# pacman

./: .gitignore  Cargo.toml  Makefile  README.md  sonar-project.properties
.github/workflows/: release.yml  sonar.yml
assets/: maze1.txt  maze1_rotation.txt  maze2.txt  maze2_rotation.txt
assets/arcade/: arcade-rules.txt  maze-logic.txt  maze-metadata.txt
examples/: generate_start_sequence_gif.rs  headless_autopilot.rs
src/: actors.rs  animation.rs  app.rs  arcade.rs  audio.rs  autopilot.rs  constants.rs  customization.rs  fruit.rs  game.rs  ghosts.rs  high_scores.rs  input.rs  kitty.rs  lib.rs  main.rs  mazedata.rs  modes.rs  nodes.rs  pacman.rs  pause.rs  pellets.rs  render.rs  sprites.rs  stack.rs  terminal.rs  text.rs  vector.rs  wgpu_graphics.rs
tools/: disassemble_midway.py
