[package]
name = "pacman"
version = "1.0.0"
edition = "2024"
autobins = false
default-run = "pacman"

[[bin]]
name = "pacman"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
fastrand = "2.3"
png = "0.18"
pollster = "0.4"
rodio = "0.21"
wgpu = "29.0.3"
winit = "0.30.13"

[dev-dependencies]
gif = "0.13"
